--- a/preprocessing/NodePreprocessing_4.ipynb
+++ b/preprocessing/NodePreprocessing_4.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -164,18 +164,17 @@
       "\n",
       "Facebook\n",
       "\n",
-      "Node2Vec\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'type' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/brunoscarone/Documents/PhD - Northeastern/Academics/Courses/Spring 22/CS7250 - InfViz/Final Project/Github_repos/BiaScope/preprocessing/NodePreprocessing_4.ipynb Cell 8'\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/NodePreprocessing_4.ipynb#ch0000007?line=50'>51</a>\u001b[0m \u001b[39mfor\u001b[39;00m attribute \u001b[39min\u001b[39;00m sensitive_attrs:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/NodePreprocessing_4.ipynb#ch0000007?line=51'>52</a>\u001b[0m     dict_node_attr_val \u001b[39m=\u001b[39m \u001b[39mdict\u001b[39m([(node_features[i,\u001b[39m0\u001b[39m],node_features[i,\u001b[39m1\u001b[39m]) \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(node_features))])\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/NodePreprocessing_4.ipynb#ch0000007?line=52'>53</a>\u001b[0m     \u001b[39mprint\u001b[39m((\u001b[39mtype\u001b[39;49m(dict_node_attr_val\u001b[39m.\u001b[39;49mkeys())[\u001b[39m0\u001b[39;49m]))\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/NodePreprocessing_4.ipynb#ch0000007?line=53'>54</a>\u001b[0m     \u001b[39m# get values from the selected attribute\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/NodePreprocessing_4.ipynb#ch0000007?line=54'>55</a>\u001b[0m     attr_pos \u001b[39m=\u001b[39m sensitive_attrs\u001b[39m.\u001b[39mindex(attribute) \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'type' object is not subscriptable"
+      "Node2Vec\n",
+      "\n",
+      "HOPE\n",
+      "\n",
+      "HGCN\n",
+      "\n",
+      "LaplacianEigenmap\n",
+      "\n",
+      "SDNE\n",
+      "\n",
+      "SVD\n"
      ]
     }
    ],
@@ -228,11 +227,9 @@
     "            outputCSV.write(\"id,attribute,value,k,group_fairness_score\\n\")\n",
     "\n",
     "            for node_id in G.nodes(): # node ids start from 0\n",
-    "                # print(node_id)\n",
     "                node_idx = dict_node_id2idx[node_id]\n",
     "                for attribute in sensitive_attrs:\n",
     "                    dict_node_attr_val = dict([(node_features[i,0],node_features[i,1]) for i in range(len(node_features))])\n",
-    "                    print(type((dict_node_attr_val.keys())[0]))\n",
     "                    # get values from the selected attribute\n",
     "                    attr_pos = sensitive_attrs.index(attribute) + 1\n",
     "                    sensitive_attrs_vals = np.unique(node_features[:,attr_pos])\n",
@@ -240,8 +237,7 @@
     "                        for k in range(5,30,5): # define possible values for k\n",
     "                            # compute group fairness score\n",
     "                            # print(type(node_id)) string\n",
-    "                            if node_id in dict_node_attr_val.keys():\n",
-    "                                print('aaa')\n",
+    "                            if int(node_id) in dict_node_attr_val.keys():\n",
     "                                score = group_unfairness_score(embedding, W, node_idx, node_features, attr_pos, value, k)\n",
     "                            else:\n",
     "                                score = \"\"\n",
