adding inform score manual test

--- a/preprocessing/NodePreprocessing_5.ipynb
+++ b/preprocessing/NodePreprocessing_5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,35 +153,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "[[0. 1. 1. ... 0. 0. 0.]\n",
-      " [1. 0. 0. ... 0. 0. 0.]\n",
-      " [1. 0. 0. ... 0. 0. 0.]\n",
-      " ...\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]]\n",
-      "True\n",
-      "False\n",
-      "0.0\n",
-      "998\n",
-      "1512\n",
-      "1517\n",
-      "1515\n",
-      "1518\n",
-      "1514\n",
-      "1513\n",
-      "1516\n",
-      "1511\n",
-      "1509\n",
-      "1744\n"
+      "0.8927921483689403\n",
+      "0.7430751155719137\n",
+      "0.8323047160858801\n"
      ]
     }
    ],
@@ -204,22 +185,64 @@
     "def check_symmetric(a, tol=1e-8):\n",
     "    return np.all(np.abs(a-a.T) < tol)\n",
     "\n",
-    "print(check_symmetric(W))\n",
-    "print(W)\n",
-    "print(not W[0,0])\n",
-    "print(not W[0,1])\n",
+    "# print(check_symmetric(W))\n",
+    "# print(W)\n",
+    "# print(not W[0,0])\n",
+    "# print(not W[0,1])\n",
     "\n",
     "idx1 = dict_node_id2idx(G)['1234']\n",
     "idx2 = dict_node_id2idx(G)['1111']\n",
-    "print(W[idx1][idx2])\n",
+    "#print(W[idx1][idx2])\n",
     "\n",
     "#print(G.nodes())\n",
-    "for i,v in enumerate(G.nodes()):\n",
-    "    if v=='1512':\n",
-    "        print(i)\n",
+    "# for i,v in enumerate(G.nodes()):\n",
+    "#     if v=='1512':\n",
+    "#         print(i)\n",
     "\n",
-    "for v in ['364', '501', '441', '564', '399', '393', '476', '351', '464', '578']:\n",
-    "    print(dict_node_id2idx(G)[v])"
+    "# for v in ['364', '501', '441', '564', '399', '393', '476', '351', '464', '578']:\n",
+    "#     print(dict_node_id2idx(G)[v])\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "embedding_file = \"../embeddings/{}/{}/{}_{}_64_embedding.npy\".format(\"Facebook\", \n",
+    "                                                                    \"HGCN\", \n",
+    "                                                                    \"Facebook\", \n",
+    "                                                                    \"HGCN\")\n",
+    "Y = np.load(embedding_file)\n",
+    "\n",
+    "focal = '3984'\n",
+    "focal_idx = dict_node_id2idx(G)[focal]\n",
+    "neighbors = ['3980']\n",
+    "#['0', '89', '95', '147', '219', '319']\n",
+    "neighbors_idx = [dict_node_id2idx(G)[n] for n in neighbors]\n",
+    "\n",
+    "score = 0\n",
+    "for n_idx in neighbors_idx:\n",
+    "    score += np.linalg.norm(Y[focal_idx]-Y[n_idx])**2\n",
+    "\n",
+    "#print(score)\n",
+    "\n",
+    "max_score = score/G.degree[focal]\n",
+    "\n",
+    "print(max_score)\n",
+    "\n",
+    "\n",
+    "\n",
+    "focal = '3812'\n",
+    "focal_idx = dict_node_id2idx(G)[focal]\n",
+    "neighbors = ['3459', '3437', '3536', '3549', '3682', '3662', '3745']\n",
+    "neighbors_idx = [dict_node_id2idx(G)[n] for n in neighbors]\n",
+    "\n",
+    "score = 0\n",
+    "for n_idx in neighbors_idx:\n",
+    "    score += np.linalg.norm(Y[focal_idx]-Y[n_idx])**2\n",
+    "\n",
+    "norm_score = (score/G.degree[focal])/max_score\n",
+    "\n",
+    "print(score/G.degree[focal])\n",
+    "\n",
+    "print(norm_score)\n"
    ]
   },
   {
