Fix bugs in scores computation; recompute CSVs; Adjust layout of new legend

--- a/preprocessing/NodePreprocessing.ipynb
+++ b/preprocessing/NodePreprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -113,38 +113,77 @@
      "text": [
       "\n",
       "\n",
-      "ca-HepTh\n",
-      "Spring Layout Elapsed Time: 208\n",
+      "Facebook\n",
+      "Spring Layout Elapsed Time: 56\n",
       "\n",
       "Node2Vec\n",
+      "PCA Elapsed Time: 0\n",
+      "\n",
+      "HOPE\n",
+      "PCA Elapsed Time: 0\n",
+      "\n",
+      "HGCN\n",
+      "PCA Elapsed Time: 0\n",
+      "\n",
+      "LaplacianEigenmap\n",
+      "PCA Elapsed Time: 0\n",
+      "\n",
+      "SDNE\n",
+      "PCA Elapsed Time: 0\n",
+      "\n",
+      "SVD\n",
+      "PCA Elapsed Time: 0\n",
+      "\n",
+      "\n",
+      "LastFM\n",
+      "Spring Layout Elapsed Time: 168\n",
+      "\n",
+      "Node2Vec\n",
+      "PCA Elapsed Time: 0\n",
+      "\n",
+      "HOPE\n",
+      "PCA Elapsed Time: 0\n",
+      "\n",
+      "HGCN\n",
+      "PCA Elapsed Time: 0\n",
+      "\n",
+      "LaplacianEigenmap\n",
+      "PCA Elapsed Time: 0\n",
+      "\n",
+      "SDNE\n",
+      "PCA Elapsed Time: 0\n",
+      "\n",
+      "SVD\n",
+      "PCA Elapsed Time: 0\n",
+      "\n",
+      "\n",
+      "wikipedia\n",
+      "Spring Layout Elapsed Time: 75\n",
+      "\n",
+      "Node2Vec\n",
+      "PCA Elapsed Time: 0\n",
+      "\n",
+      "HOPE\n",
+      "PCA Elapsed Time: 0\n",
+      "\n",
+      "HGCN\n",
+      "PCA Elapsed Time: 0\n",
+      "\n",
+      "LaplacianEigenmap\n",
+      "PCA Elapsed Time: 0\n",
+      "\n",
+      "SDNE\n",
       "PCA Elapsed Time: 0\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "index 24325 is out of bounds for axis 0 with size 9877",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/Users/brunoscarone/Documents/PhD - Northeastern/Academics/Courses/Spring 22/CS7250 - InfViz/Final Project/Github_repo/InfoViz-Final/preprocessing/NodePreprocessing.ipynb Cell 7'\u001b[0m in \u001b[0;36m<cell line: 16>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repo/InfoViz-Final/preprocessing/NodePreprocessing.ipynb#ch0000006?line=48'>49</a>\u001b[0m inFoRM_hops_score \u001b[39m=\u001b[39m utilities\u001b[39m.\u001b[39mk_hop_InFoRM_scores_normalized(embeddings, G, nr_hops)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repo/InfoViz-Final/preprocessing/NodePreprocessing.ipynb#ch0000006?line=50'>51</a>\u001b[0m \u001b[39mfor\u001b[39;00m node_id \u001b[39min\u001b[39;00m node_features:\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repo/InfoViz-Final/preprocessing/NodePreprocessing.ipynb#ch0000006?line=51'>52</a>\u001b[0m     \u001b[39mif\u001b[39;00m nr_hops \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m \u001b[39mand\u001b[39;00m \u001b[39mround\u001b[39m(inFoRM_hops_score[\u001b[39mint\u001b[39;49m(node_id)],\u001b[39m8\u001b[39m) \u001b[39m!=\u001b[39m \u001b[39mround\u001b[39m(inFoRM_1_score[\u001b[39mint\u001b[39m(node_id)],\u001b[39m8\u001b[39m):\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repo/InfoViz-Final/preprocessing/NodePreprocessing.ipynb#ch0000006?line=52'>53</a>\u001b[0m         \u001b[39m# check consistency with previous function for nr_hops = 1\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repo/InfoViz-Final/preprocessing/NodePreprocessing.ipynb#ch0000006?line=53'>54</a>\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mnode_id\u001b[39m\u001b[39m'\u001b[39m,node_id)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repo/InfoViz-Final/preprocessing/NodePreprocessing.ipynb#ch0000006?line=54'>55</a>\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39minFoRM_hops_score[int(node_id)]\u001b[39m\u001b[39m'\u001b[39m,inFoRM_hops_score[\u001b[39mint\u001b[39m(node_id)])\n",
-      "\u001b[0;31mIndexError\u001b[0m: index 24325 is out of bounds for axis 0 with size 9877"
      ]
     }
    ],
    "source": [
-    "# graph_metadata = {\"Facebook\": {\"edgelist\": \"../edgelists/facebook_combined.edgelist\"},\n",
-    "#                  \"LastFM\": {\"edgelist\": \"../edgelists/lastfm_asia_edges.edgelist\"},\n",
-    "#                  \"wikipedia\": {\"edgelist\": \"../edgelists/wikipedia.edgelist\"},\n",
-    "#                   \"protein-protein\": {\"edgelist\": \"../edgelists/ppi.edgelist\"},\n",
-    "#                   \"ca-HepTh\": {\"edgelist\": \"../edgelists/ca-HepTh.edgelist\"},\n",
-    "#                   \"AutonomousSystems\": {\"edgelist\": \"../edgelists/AS.edgelist\"},\n",
-    "#                  }\n",
-    "graph_metadata = {\n",
-    "                 #\"wikipedia\": {\"edgelist\": \"../edgelists/wikipedia.edgelist\"},\n",
-    "                  #protein-protein\": {\"edgelist\": \"../edgelists/ppi.edgelist\"},\n",
-    "                  #\"ca-HepTh\": {\"edgelist\": \"../edgelists/ca-HepTh.edgelist\"},\n",
-    "                  \"AutonomousSystems\": {\"edgelist\": \"../edgelists/AS.edgelist\"},\n",
+    "graph_metadata = {\"Facebook\": {\"edgelist\": \"../edgelists/facebook_combined.edgelist\"},\n",
+    "                 \"LastFM\": {\"edgelist\": \"../edgelists/lastfm_asia_edges.edgelist\"},\n",
+    "                 \"wikipedia\": {\"edgelist\": \"../edgelists/wikipedia.edgelist\"},\n",
+    "                  \"protein-protein\": {\"edgelist\": \"../edgelists/ppi.edgelist\"},\n",
+    "                #   \"ca-HepTh\": {\"edgelist\": \"../edgelists/ca-HepTh.edgelist\"},\n",
+    "                #   \"AutonomousSystems\": {\"edgelist\": \"../edgelists/AS.edgelist\"},\n",
     "                 }\n",
     "embedding_algs = [\"Node2Vec\", \"HOPE\", \"HGCN\", \"LaplacianEigenmap\", \"SDNE\", \"SVD\"]\n",
     "\n",
@@ -157,9 +196,12 @@
     "\n",
     "    get_node_pos(G, node_features)\n",
     "\n",
-    "    # ids from the nodes are not sorted\n",
-    "    # for i,n in node_features.items():\n",
-    "    #     print(i,n)\n",
+    "    # dict node_id <-> row in W (node idx)\n",
+    "    dict_node_id2idx = {}\n",
+    "    dict_node_idx2id = {}\n",
+    "    for i,v in enumerate(G.nodes()):\n",
+    "        dict_node_id2idx[v] = i\n",
+    "        dict_node_idx2id[i] = v\n",
     "    \n",
     "    for embedding_alg in embedding_algs:\n",
     "        print(\"\\n\" + embedding_alg)\n",
@@ -177,20 +219,21 @@
     "                                                                                         graph_name, \n",
     "                                                                                         embedding_alg)\n",
     "        adj_matrix = nx.to_numpy_array(G) # only needed for consistency check\n",
-    "        inFoRM_1_score = utilities.unfairness_scores_normalized(embeddings, adj_matrix, G) # only needed for consistency check\n",
+    "        # inFoRM_1_score = utilities.unfairness_scores_normalized(embeddings, adj_matrix, G) # only needed for consistency check\n",
     "        with open(output_file, \"w\") as outputCSV:\n",
     "            outputCSV.write(\"id,pos_x,pos_y,proj_x,proj_y,nr_hops,InFoRM_hops\\n\")\n",
     "            for nr_hops in range(1,3):\n",
     "                inFoRM_hops_score = utilities.k_hop_InFoRM_scores_normalized(embeddings, G, nr_hops)\n",
     "                \n",
     "                for node_id in node_features:\n",
+    "                    node_idx = dict_node_id2idx[node_id]\n",
     "                    outputCSV.write(\"{},{},{},{},{},{},{}\\n\".format(node_features[node_id][\"id\"],\n",
     "                                                                    node_features[node_id][\"pos_x\"],\n",
     "                                                                    node_features[node_id][\"pos_y\"],\n",
     "                                                                    node_features[node_id][\"proj_x\"],\n",
     "                                                                    node_features[node_id][\"proj_y\"],\n",
     "                                                                    nr_hops,\n",
-    "                                                                    inFoRM_hops_score[int(node_id)]))\n",
+    "                                                                    inFoRM_hops_score[node_idx])) # needs idx\n",
     "            "
    ]
   },
