--- a/preprocessing/NodePreprocessing.ipynb
+++ b/preprocessing/NodePreprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
       "\n",
       "\n",
       "Facebook\n",
-      "Spring Layout Elapsed Time: 56\n",
+      "Spring Layout Elapsed Time: 40\n",
       "\n",
       "Node2Vec\n",
       "PCA Elapsed Time: 0\n",
@@ -136,7 +136,7 @@
       "\n",
       "\n",
       "LastFM\n",
-      "Spring Layout Elapsed Time: 168\n",
+      "Spring Layout Elapsed Time: 153\n",
       "\n",
       "Node2Vec\n",
       "PCA Elapsed Time: 0\n",
@@ -158,7 +158,7 @@
       "\n",
       "\n",
       "wikipedia\n",
-      "Spring Layout Elapsed Time: 75\n",
+      "Spring Layout Elapsed Time: 69\n",
       "\n",
       "Node2Vec\n",
       "PCA Elapsed Time: 0\n",
@@ -173,6 +173,31 @@
       "PCA Elapsed Time: 0\n",
       "\n",
       "SDNE\n",
+      "PCA Elapsed Time: 0\n",
+      "\n",
+      "SVD\n",
+      "PCA Elapsed Time: 0\n",
+      "\n",
+      "\n",
+      "protein-protein\n",
+      "Spring Layout Elapsed Time: 38\n",
+      "\n",
+      "Node2Vec\n",
+      "PCA Elapsed Time: 0\n",
+      "\n",
+      "HOPE\n",
+      "PCA Elapsed Time: 0\n",
+      "\n",
+      "HGCN\n",
+      "PCA Elapsed Time: 0\n",
+      "\n",
+      "LaplacianEigenmap\n",
+      "PCA Elapsed Time: 0\n",
+      "\n",
+      "SDNE\n",
+      "PCA Elapsed Time: 0\n",
+      "\n",
+      "SVD\n",
       "PCA Elapsed Time: 0\n"
      ]
     }
@@ -227,6 +252,7 @@
     "                \n",
     "                for node_id in node_features:\n",
     "                    node_idx = dict_node_id2idx[node_id]\n",
+    "                    \n",
     "                    outputCSV.write(\"{},{},{},{},{},{},{}\\n\".format(node_features[node_id][\"id\"],\n",
     "                                                                    node_features[node_id][\"pos_x\"],\n",
     "                                                                    node_features[node_id][\"pos_y\"],\n",
